--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
     <body>
         <section>
             <div class="container-fluid">
-                <div class="row position-absolute" style="top: 3%; right: 3%;">
+                <div class="row position-absolute" style="top: 0; right: 2%;">
                     {% with messages = get_flashed_messages(with_categories=true) %}
                         {% if messages %}
                             {% for category, message in messages %}
