--- a/templates/product/product_delete_sold.html
+++ b/templates/product/product_delete_sold.html
@@ -1,13 +1,13 @@
 {% extends 'base.html' %}
 {% block title %}
-Product Delete All Page
+Product Delete Sold Page
 {% endblock %}
 {% block content %}
 <section>
     <div class="container">
         <div class="row justify-content-center align-items-center" style="height: 100vh;">
             <div class="col-6">
-                <p class="text-center text-muted mt-3" style="font-size: 40px; font-weight: 300;">Product Delete All Page</p>
+                <p class="text-center text-muted mt-3" style="font-size: 40px; font-weight: 300;">Product Delete Sold Page</p>
                 <form method="post" class="col-12">
                     <button type="submit" class="w-100 rounded py-2 text-center text-white btn btn-danger" style="font-size: 20px;">Yes</button>
                     <a href="{{ url_for('product_list_page') }}" class="w-100 rounded py-2 text-center text-white text-decoration-none btn button-hover btn-primary mt-3" style="font-size: 20px;">Back</a>
